[css-typed-om] Fix DCHECK when creating a CSSUnitValue an empty unit.

When we create a CSSUnitValue with '' as the unit, we hit a DCHECK
in the unit trie code because the length is 0. This is because we don't
correctly reject the empty string as an invalid unit.

In this patch we fix this. Interestingly, we already have a test to
assert that using an empty unit throws type error. However the test used
an incorrect variable name, causing it to throw a TypeError anyway,
so our tests would've passed no matter what.

Bug: 820905
Change-Id: I72ab5e4010d892042b2cfddf1014ab79d04a846d
Reviewed-on: https://chromium-review.googlesource.com/958624
Reviewed-by: nainar <nainar@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542693}
Former-commit-id: 072aa3160b98cf57fc8e1be82655f6a3b47b54e9