third_party/WebKit/Source/core/css/cssom/CSSNumericValue.cpp
@@ -192,6 +192,8 @@ bool CSSNumericValue::IsValidUnit(CSSPrimitiveValue::UnitType unit) {
 }
 
 CSSPrimitiveValue::UnitType CSSNumericValue::UnitFromName(const String& name) {
+  if (name.IsEmpty())
+    return CSSPrimitiveValue::UnitType::kUnknown;
   if (EqualIgnoringASCIICase(name, "number"))
     return CSSPrimitiveValue::UnitType::kNumber;
   if (EqualIgnoringASCIICase(name, "percent") || name == "%")
